# fastapi-skeleton-2025

./: .gitignore  README.md  README.skeleton.md  pyproject.toml
scripts/: generate_secrets.py
src/: app.py
src/middleware/: authnz.py  token.py
